--- a/Dashboard-Frontend/src/app/components/dashboard/main-nav/main-nav.component.html
+++ b/Dashboard-Frontend/src/app/components/dashboard/main-nav/main-nav.component.html
@@ -1,11 +1,17 @@
-    <mat-toolbar color="primary">
-      <span class="col-11">Oefen-Project</span>
-      <button class="col-1"
-        type="button"
-        aria-label="UserInterface"
-        mat-icon-button>
-        <span>user</span>
-        <mat-icon aria-label="Side nav toggle icon">person</mat-icon>
-      </button>
-    </mat-toolbar>
+<mat-toolbar color="primary">
+  <mat-toolbar-row class="container">
+    <div class="col-1">
+      <span>Horeca management</span>
+    </div>
+    <div class="row justify-content-between">
+      <div>
+        <button (click)="navigateToShifts()" mat-button>Shifts</button>
+        <button (click)="navigateToHours()" mat-button>Hours</button>
+      </div>
+    </div>
 
+    <div class="">
+      <button (click)="logout()" mat-button>Logout</button>
+    </div>
+  </mat-toolbar-row>
+</mat-toolbar>
